--- a/index.html
+++ b/index.html
@@ -9,22 +9,52 @@
     <title>Document</title>
 </head>
 <body>
+    <img id="imgPrimary">
     <header>
         <img width="200px" height="28px" src="./images/logo.svg">
         <i class="fas fa-bars"></i>
     </header>
-    <section id>
+    <section id="sec01">
         <p class="fTitle ftPurple">Hey</p><p class="fTitle">, I'am Alisson Ramos</p>
         <h3>A Front-end Developer and Web Designer</h3>
         <p>I'am a technology enthusiast and passionate about systems development</p>
         <i class="fab fa-github"></i>
         <i class="fab fa-instagram"></i>
         <hr>
-        <img id="imgPrimary">
+        
     </section>
-    <!--<section>
+    <div id="title">
         <i class="fab fa-font-awesome-flag"></i>
         <h2>Projects</h2>
-    </section>-->
+    </div>
+    <section id="sec02">
+        
+        <div class="projects">
+            <div id="pIcons">
+                <i class="far fa-folder"></i>
+                <div>
+                    <i class="fas fa-external-link-alt"></i>
+                    <i class="fab fa-github"></i>
+                </div>
+            </div>
+            <div id="txtProject">
+                <h3>Coming soon</h3>
+                <p>come back later, projects are under development.</p>
+            </div>
+        </div>
+        <div class="projects">
+            <div id="pIcons">
+                <i class="far fa-folder"></i>
+                <div>
+                    <i class="fas fa-external-link-alt"></i>
+                    <i class="fab fa-github"></i>
+                </div>
+            </div>
+            <div id="txtProject">
+                <h3>Project</h3>
+                <p>come back later, projects are under development.</p>
+            </div>
+        </div>  
+    </section>
 </body>
 </html>
