--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
 <body>
     <img id="imgPrimary">
     <header>
-        <img width="200px" height="28px" src="./images/logo.svg">
-        <i class="fas fa-bars"></i>
+        <img width="200px" height="28px" src="./images/logo.svg" class="iHeader">
+        <i class="fas fa-bars iHeader"></i>
     </header>
     <section id="sec01">
-        <p class="fTitle ftPurple">Hey</p><p class="fTitle">, I'am Alisson Ramos</p>
+        <p class="fTitle ftPurple">Hey</p><p class="fTitle">, I am Alisson Ramos</p>
         <h3>A Front-end Developer and Web Designer</h3>
-        <p>I'am a technology enthusiast and passionate about systems development</p>
+        <p>I am a technology enthusiast and passionate about systems development</p>
         <i class="fab fa-github"></i>
         <i class="fab fa-instagram"></i>
         <hr>
         
     </section>
-    <div id="title">
+    <div class="title">
         <i class="fab fa-font-awesome-flag"></i>
         <h2>Projects</h2>
     </div>
@@ -56,5 +56,31 @@
             </div>
         </div>  
     </section>
+    <div class="title t02">
+        <i class="far fa-gem"></i>
+        <h2>Projects</h2>
+    </div>
+    <section id="sec03">
+        
+        <div class="skillBlock">
+            <img width="100px" src="./images/css_purple.svg">
+        </div>
+        <div class="skillBlock">
+            <img width="100px" src="./images/html_purple.svg">
+        </div>
+        <div class="skillBlock">
+            <img width="100px" src="./images/js_purple.svg">
+        </div>
+        <div class="skillBlock">
+            <img width="100px" src="./images/illustrator_purple.svg">
+        </div>
+    </section>
+    <footer>
+        <p>@ 2022 Alisson Ramos</p>
+        <div id="fText">
+            <p id="Powered">Powered By</p>
+            <img width="50px" src="./images/reduce_logo.svg">
+        </div>
+    </footer>
 </body>
 </html>
