--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </div>
             </div>
             <div id="txtProject">
-                <h3>Project</h3>
+                <h3>Coming soon</h3>
                 <p>come back later, projects are under development.</p>
             </div>
         </div>  
