--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/fc33e921c2.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="stylesheet" type="text/css" href="css/mediaqueries.css">
     <link rel = "shortcut icon" href="./images/reduce_logo.svg">
     <title>Portifolio</title>
 </head>
@@ -19,6 +20,7 @@
         <i class="fas fa-bars iHeader"></i>
     </header>
     <section id="sec01">
+        
         <p class="fTitle ftPurple">Hey</p><p class="fTitle">, I am Alisson Ramos</p>
         <h3>A Front-end Developer and Web Designer</h3>
         <p>I am a technology enthusiast and passionate about systems development</p>
@@ -27,6 +29,7 @@
         <hr>
         
     </section>
+        <img id="imgSec" src="./images/img.jpg">
     <div class="title">
         <i class="fab fa-font-awesome-flag"></i>
         <h2>Projects</h2>
@@ -55,7 +58,7 @@
                 </div>
             </div>
             <div id="txtProject">
-                <h3>Project</h3>
+                <h3>Coming soon</h3>
                 <p>come back later, projects are under development.</p>
             </div>
         </div>  
