--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
                 <i class="far fa-folder"></i>
                 <div>
                     <i class="fas fa-external-link-alt"></i>
-                    <i class="fab fa-github"></i>
+                    <a href="https://github.com/Alisson-Ramos/umaCausa" target="_blank"><i class="fab fa-github"></i></a>
                 </div>
             </div>
             <div id="txtProject">
-                <h3>Coming soon</h3>
-                <p>come back later, projects are under development.</p>
+                <h3>umaCausa</h3>
+                <p>Trabalho de conclusão de curso do Ensino Médio Integrado ao Técnico em Desenvolvimento de Sistemas.</p>
             </div>
         </div>  
     </section>
